[package]
name = "proj4wkt"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"
description = "Parse WKT to Proj strings"
readme = "./README.md"
keywords = ["gis", "proj", "projection", "geography", "geospatial"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
nom = "7.1"
log = { version = "0.4", optional = true  }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.3" }
env_logger = "0.10"
clap = { version = "4", features=["derive"] }
log = "0.4"

[profile.release]
lto = true
codegen-units = 1

[lib]
crate_type = ["cdylib", "rlib"]

[features]
logging = ["log"]
wasm-strict = []
proj4js-compat = []

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wee_alloc = "0.4"
console_log = "1.0"
